<resources>
    <string name="app_name">AndroidFinal_Hygor_Costa</string>

    <string name="search_button_text">Search</string>
    <string name="search_user_hint">Search user</string>
    <string name="min_repos">min. # repos</string>
    <string name="followers">followers</string>
    <string name="page_size">page size</string>
    <string name="min_followers">min. # followers</string>
    <string name="repos">repos</string>

    <string name="menu_about">About</string>

    <string name="user_score">Score: %1$s</string>
    <string name="user_login">Login: %1$s</string>
    <string name="user_id">ID: %1$s</string>
    <string name="image_description">Avatar</string>

    <string name="placeholder_url">url</string>
    <string name="user_name">Name: %1$s</string>

    <string name="user_location">Location: %1$s</string>
    <string name="user_company">Company: %1$s</string>
    <string name="user_followers">Followers: %1$s</string>
    <string name="user_public_gist">Public Gists: %1$s</string>
    <string name="user_public_repos">Public Repos: %1$s</string>
    <string name="user_last_update">Last Updated: %1$s</string>
    <string name="user_account_created">Account Created: %1$s</string>

<!--    Key values do not translate-->
    <string name="user_data_key">USER_DATA</string>
    <string name="url_key">URL_KEY</string>
    <string name="details_title_key">ACTIONBAR_TITLE</string>
    <string name="details_url_key">DETAILS_URL</string>
    <string name="details_html_url_key">DETAILS_HTML_URL</string>


    <string name="dev_image_description">Hygor Profile Picture</string>
    <string name="dev_version">Android Final v1.0</string>
    <string name="dev_name">Hygor Costa</string>
    <string name="dev_email">cost0142@algonquinlive.com</string>
    <string name="dev_gitHub">https://www.github.com/cost0142</string>
    <string name="dev_course">MAD 2022</string>

    <string name="repos_key">REPOS_KEY</string>
    <string name="followers_key">FOLLOWERS_KEY</string>
    <string name="page_size_key">PAGE_SIZE_KEY</string>

    <string name="message_title">Network Error</string>
    <string name="message_text">No internet connection available.</string>
    <string name="quit">Quit</string>

</resources>