<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/devNameTextView"
        android:layout_width="78dp"
        android:layout_height="20dp"
        android:layout_marginBottom="396dp"
        android:text="@string/dev_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.436" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="204dp"
        android:layout_height="228dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/dev_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hygor" />

    <TextView
        android:id="@+id/devEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devVersion"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/devGtiHub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_gitHub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devEmail"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/devVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devNameTextView"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/devCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_course"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <!--    <TextView-->
<!--        android:id="@+id/textView5"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:text="@string/about_app_name_version"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/devProfilePic" />-->



</androidx.constraintlayout.widget.ConstraintLayout>

