<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/searchUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:ems="10"
        android:hint="@string/search_user_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/searchButton"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchButton"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <NumberPicker
        android:id="@+id/perPageNumberPicker"
        android:layout_width="52dp"
        android:layout_height="106dp"
        android:layout_margin="50dp"
        android:layout_marginBottom="508dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136" />

    <TextView
        android:id="@+id/labelMinRepos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_repos"
        app:layout_constraintBottom_toBottomOf="@+id/labelPageSize"
        app:layout_constraintEnd_toStartOf="@+id/labelMinFollowers"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/minFollowersEditText"
        android:layout_width="81dp"
        android:layout_height="48dp"
        android:autofillHints="10"
        android:ems="10"
        android:hint="@string/followers"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toEndOf="@+id/perPageNumberPicker"
        app:layout_constraintTop_toBottomOf="@+id/searchUser"
        app:layout_constraintVertical_bias="0.081"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/labelPageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_size"
        app:layout_constraintBottom_toBottomOf="@+id/labelMinFollowers"
        app:layout_constraintEnd_toStartOf="@+id/labelMinRepos"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/labelMinFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/min_followers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/minReposEditText"
        android:layout_width="81dp"
        android:layout_height="48dp"
        android:autofillHints="10"
        android:ems="10"
        android:hint="@string/repos"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchUser"
        app:layout_constraintVertical_bias="0.083"
        tools:ignore="TextContrastCheck" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>